--- a/hero.css
+++ b/hero.css
@@ -3,7 +3,7 @@ section {
   padding: 15rem 7% 2rem;
 }
 
-.hero-section {
+#hero-section {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -25,10 +25,9 @@ section {
 
 .intro-text h4 {
   text-align: left;
-  font-size: 2rem;
+  font-size: 24px;
   font-weight: 700;
-  line-height: 0.3;
-  /* margin-bottom: 1rem; */
+  margin-bottom: 0.2rem;
   color: #393939;
 }
 
@@ -46,11 +45,12 @@ section {
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   white-space: nowrap;
-  /* margin: 25px; */
+  margin-top: 0;
+  padding: 0;
 }
 
 .intro-text h3 {
-  font-size: 2.5rem;
+  font-size: 24px;
   font-weight: 600;
   color: #393939;
 }
