--- a/projects.css
+++ b/projects.css
@@ -15,29 +15,33 @@
 
 .prj_container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   align-items: center;
-  gap: 40px;
+  margin-left: 50px;
+  column-gap: 70px;
+  row-gap: 60px;
 }
 
 .prj_box {
   position: relative;
-  border-radius: 1rem;
-  height: 350px;
-  width: 600px;
+  border-radius: 16px;
+  min-height: 350px;
+  width: 313px;
   background-color: rgb(139, 0, 93);
   box-shadow: 0 0 8px rgb(70, 46, 62);
   overflow: hidden;
   transition: 0.5s ease;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .prj-img {
-  display: flex;
-  align-items: center;
   height: 200px;
-  width: 250px;
-  margin: 5px;
-  border-radius: 5px;
+  width: 280px;
+  margin: 10px;
+  border-radius: 10px;
   cursor: pointer;
   transition: 0.5s ease;
 }
@@ -45,31 +49,23 @@
 .prj-img:hover,
 .prj_box:hover {
   transform: scale(1.03);
-  opacity: 50%;
 }
 
 .project_description {
-  position: absolute;
-  bottom: 0;
-  left: 0;
+  position: relative;
   width: 100%;
-  height: 100%;
   color: gainsboro;
   display: flex;
-  justify-content: end;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
   text-align: center;
-  /* transform: translateY(100%);
-  transition: 0.5s ease; */
+  padding: 15px;
 }
 
 .project_description:hover {
   transform: translateY(0);
-}
-
-.project_description h3 {
-  font-size: 20px;
+  opacity: 100%;
 }
 
 .project_description p {
@@ -77,20 +73,37 @@
   line-height: 1.4;
 }
 
-.label {
-  font-size: 18px;
+h3 {
+  font-size: 14px;
   font-weight: 600;
+  margin-top: 16px;
+}
+
+.links {
+  margin-top: 10px;
 }
 
 .github {
   height: 20px;
   width: 20px;
+  background-color: rgb(161, 161, 161);
+  border-radius: 50%;
 }
 
 .live-page {
-  height: 20px;
-  width: 80px;
+  display: inline-block;
+  text-decoration: none;
   font-weight: 600;
   text-align: center;
   border-radius: 5px;
+  margin: 8px;
+  background-color: gray;
+  color: white;
+  padding: 8px 12px;
+  transition: 0.3s;
+}
+
+.live-page:hover,
+.github {
+  background-color: darkgray;
 }
