--- a/about.css
+++ b/about.css
@@ -1,4 +1,4 @@
-.about-section {
+#about-section {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,54 +10,58 @@
 }
 
 .about-me {
-  font-size: 180px;
+  font-size: 120px;
   font-weight: 900;
   justify-content: top;
   position: absolute;
-  top: 15%;
-  left: 60%;
+  top: 10%;
+  left: 52%;
   opacity: 0.2;
   transform: translate(-50%, -50%);
-  margin-bottom: 26px;
   flex: 1;
   z-index: -1;
   white-space: nowrap;
 }
 
+.about-content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+  max-width: 1200px;
+  width: 100%;
+  flex-wrap: nowrap;
+}
+
 .pic_container {
   flex: 1;
-  /* position: relative;
-    text-align: left;
-    height: 460px;
-    width: auto;
-    margin-bottom: 120px;
-    border-radius: 10px;
-    overflow: hidden;
-    z-index: 1; */
-  /* margin-right: 32px; */
-  /* flex-shrink: 0; */
 }
 
 .pic_container img {
   width: 100%;
-  margin-left: 135px;
   max-width: 400px;
   height: auto;
   border-radius: 8px;
 }
 
 .about-container {
+  display: flex;
   flex: 1;
   z-index: 1;
+  justify-content: center;
+  align-items: center;
+  margin-top: 86px;
+  margin-right: 56px;
 }
 
 .details-container {
-  flex: 1;
+  /* flex: 1; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  max-width: 600px;
+  max-width: 800px;
 }
 .abt_txt_1,
 .about_text_2 {
@@ -73,18 +77,23 @@
 
 .cv_btn {
   font-size: 16px;
-  width: 120px;
+  width: 80px;
   padding: 8px 5px;
   margin-top: 40px;
   margin-left: 260px;
   background: rgb(102, 102, 102);
   color: gainsboro;
   border: none;
-  border-radius: 30px;
+  border-radius: 10px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
 .cv_btn:hover {
   background-color: rgb(135, 135, 135);
   color: rgb(32, 32, 32);
+}
+
+.download {
+  width: 20px;
+  margin-right: 5px;
 }
