--- a/hero.css
+++ b/hero.css
@@ -1,4 +1,4 @@
-section {
+#hero-section {
   min-height: 100vh;
   padding: 15rem 7% 2rem;
 }
@@ -7,14 +7,12 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: rgb(245, 4, 130);
+  background: rgb(255, 0, 134);
   background: linear-gradient(
-    259deg,
-    rgba(245, 4, 130, 0.46551120448179273) 25%,
-    rgba(255, 217, 244, 1) 68%
+    270deg,
+    rgba(255, 0, 134, 1) 0%,
+    rgba(255, 160, 210, 1) 100%
   );
-
-  /* padding: 0 20px; */
 }
 
 .intro-text {
@@ -58,33 +56,52 @@ section {
 .btn-container {
   display: flex;
   justify-content: center;
-  gap: 10px;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 15px;
   margin-top: 30px;
 }
 
-.btn-color-1,
-.btn-color-2 {
+.btn-cv,
+.btn-kontakt {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  flex: 1;
+  min-width: 120px;
+  max-width: 120px;
+  min-height: 40px;
   font-size: 14px;
   font-weight: 600;
   transition: all 300ms ease;
-  padding: 10px;
-  width: 120px;
-  border-radius: 30px;
+  border-radius: 10px;
   border: rgb(102, 102, 102) 0.1rem solid;
   color: rgb(102, 102, 102);
+  box-shadow: 0 0 4px rgb(46, 46, 46);
   cursor: pointer;
   background: none;
   transition: transform 0.5s ease;
 }
 
-.btn-color-1:hover {
+.dnl-img {
+  width: 20px;
+}
+
+.btn-kontakt {
+  width: 108px;
+  padding: 10px;
+}
+
+.btn-cv:hover {
   background: rgb(102, 102, 102);
   color: gainsboro;
   border: none;
   transform: scale(1.05);
 }
 
-.btn-color-2:hover {
+.btn-kontakt:hover {
   background: rgb(197, 197, 197);
   border: none;
   transform: scale(1.05);
@@ -108,4 +125,19 @@ section {
 }
 .social-media a:hover {
   transform: scale(1.2);
+}
+
+@keyframes zoomIn {
+  0% {
+    transform: scale(0.5);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.intro-text h1 {
+  animation: zoomIn 1.5s ease-in-out forwards;
 }
