--- a/header.css
+++ b/header.css
@@ -3,7 +3,6 @@
   top: 0;
   left: 0;
   width: 100%;
-  padding: 20px 7%;
   background: rgb(231, 27, 139);
   display: flex;
   justify-content: space-between;
@@ -11,11 +10,16 @@
   z-index: 100;
 }
 
+.logo-container {
+  display: flex;
+  align-items: center;
+}
+
 .logo {
-  font-size: 2.7rem;
-  font-weight: 600;
-  cursor: default;
-  margin-right: auto;
+  width: 90px;
+  height: auto;
+  max-width: 100%;
+  display: block;
 }
 
 #navbar-links {
@@ -26,7 +30,6 @@
 }
 
 #navbar-links a {
-  /* position: relative; */
   font-size: 2.5rem;
   font-weight: 600;
   color: rgb(59, 59, 59);
@@ -43,61 +46,74 @@
 #navbar-links.open {
   max-height: 300px;
 }
-/* .navbar-links a.active::before {
-    content: "";
-    position: absolute;
+
+@media (max-width: 480px) {
+  #header {
+    padding: 15px 5%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .logo-container {
+    display: flex;
+    align-items: center;
+  }
+
+  .logo {
+    width: 60px !important;
+    height: auto;
+    max-width: 100%;
+    display: block;
+  }
+
+  #navbar-links {
+    position: static;
+    top: 100%;
     left: 0;
-    width: 100%;
-    height: 0.2rem;
-    background: none;
+    width: auto;
+    background: rgb(231, 27, 139);
+    color: #000;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 5px;
+    z-index: 99;
+    transition: none;
   }
-  
-  .navbar-links li {
-    list-style: none;
-    display: inline-block;
-  } */
 
-/* Hamburger Menu  */
-
-#hamburger-nav {
-  display: none;
-}
-
-#hamburger-menu {
-  display: none;
-  cursor: pointer;
-}
-
-.hamburger-icon {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-  width: 30px;
-}
-
-.hamburger-icon span {
-  width: 100%;
-  height: 3px;
-  background-color: rgb(68, 67, 67);
-  transition: all 0.3s ease-in-out;
-}
-
-.hamburger-icon.open span:first-child {
-  transform: rotate(45deg) translate(5px, 5px);
-}
-.hamburger-icon.open span:nth-child(2) {
-  opacity: 0;
-}
-.hamburger-icon.open span:last-child {
-  transform: rotate(-45deg) translate(5px, -5px);
-}
-
-/* .hamburger-icon span:first-child {
-    transform: none;
+  #navbar-links.open {
+    max-height: 150px;
   }
-  .hamburger-icon span:first-child {
-    opacity: 1;
+
+  #navbar-links a {
+    font-size: 16px;
+    margin: 5px 0;
   }
-  .hamburger-icon span:first-child {
-    transform: none;
-  } */
+}
+
+@media (max-width: 768px) {
+  #header {
+    padding: 15px 5%;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .logo {
+    width: 80px;
+    height: auto;
+  }
+
+  #navbar-links {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    position: static;
+    width: auto;
+  }
+
+  #navbar-links a {
+    font-size: 20px;
+  }
+}
