--- a/hero.css
+++ b/hero.css
@@ -7,16 +7,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: rgb(255, 0, 134);
+  background: rgb(255, 0, 147);
   background: linear-gradient(
     270deg,
-    rgba(255, 0, 134, 1) 0%,
-    rgba(255, 160, 210, 1) 100%
+    rgba(255, 0, 147, 1) 0%,
+    rgba(255, 211, 231, 1) 100%
   );
 }
 
 .intro-text {
-  /* max-width: 88rem; */
   text-align: center;
   max-width: 100%;
 }
@@ -140,4 +139,75 @@
 
 .intro-text h1 {
   animation: zoomIn 1.5s ease-in-out forwards;
+}
+
+@media (max-width: 768px) {
+  #hero-section {
+    flex-direction: column;
+    text-align: center;
+    padding: 10rem 5% 2rem;
+  }
+
+  .intro-text h1 {
+    font-size: 76px;
+  }
+
+  .intro-text h4,
+  .intro-text h3 {
+    font-size: 20px;
+  }
+
+  .btn-container {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .btn-cv,
+  .btn-kontakt {
+    min-width: 106px;
+  }
+}
+
+@media (max-width: 480px) {
+  #hero-section {
+    min-height: 100vh;
+    padding: 13rem 5% 2rem;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .intro-text h1 {
+    font-size: 50px;
+    white-space: normal;
+  }
+
+  .intro-text h4,
+  .intro-text h3 {
+    font-size: 14px;
+    text-align: center;
+  }
+
+  .btn-container {
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 20px;
+  }
+
+  .btn-cv,
+  .btn-kontakt {
+    width: 100%;
+    max-width: 106px;
+    min-height: 35px;
+    font-size: 12px;
+  }
+
+  .social-media {
+    margin: 15px;
+    padding: 15px;
+  }
+
+  .social-media a {
+    width: 15px;
+    height: 15px;
+  }
 }
