--- a/about.css
+++ b/about.css
@@ -4,6 +4,7 @@
   align-items: center;
   min-height: 100vh;
   height: 100%;
+  /* height: calc(100vh - 9rem); */
   padding: 20px;
   position: relative;
 }
