--- a/about.css
+++ b/about.css
@@ -28,7 +28,6 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 50px;
   max-width: 1200px;
   width: 100%;
   flex-wrap: nowrap;
@@ -36,13 +35,42 @@
 
 .pic_container {
   flex: 1;
+  position: relative;
+  width: 100%;
+  height: 470px;
+  right: 12%;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgb(255, 0, 147);
+  background: radial-gradient(
+    circle,
+    rgba(255, 0, 147, 1) 0%,
+    rgba(70, 59, 64, 1) 99%
+  );
+  border: 2px solid rgb(102, 102, 102);
+  overflow: hidden;
+  animation: slideRight 3s ease-out forwards;
+  animation-delay: 3s;
+}
+@keyframes slideRight {
+  from {
+    opacity: 0;
+    transform: translateX(0);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(80px);
+  }
 }
 
 .pic_container img {
+  position: relative;
   width: 100%;
-  max-width: 400px;
+  max-width: 360px;
   height: auto;
-  border-radius: 8px;
+  z-index: 1;
 }
 
 .about-container {
@@ -52,17 +80,30 @@
   justify-content: center;
   align-items: center;
   margin-top: 86px;
-  margin-right: 56px;
+  margin-right: 50px;
 }
 
 .details-container {
-  /* flex: 1; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
   max-width: 800px;
+  animation: slideLeft 3s ease-out forwards;
+  animation-delay: 3s;
 }
+
+@keyframes slideLeft {
+  from {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
 .abt_txt_1,
 .about_text_2 {
   font-size: 16px;
@@ -83,14 +124,16 @@
   margin-left: 260px;
   background: rgb(102, 102, 102);
   color: gainsboro;
+  box-shadow: 0 0 4px rgb(46, 46, 46);
   border: none;
   border-radius: 10px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  transition: transform 0.5s ease;
 }
 .cv_btn:hover {
   background-color: rgb(135, 135, 135);
   color: rgb(32, 32, 32);
+  transform: scale(1.05);
 }
 
 .download {
