--- a/about.css
+++ b/about.css
@@ -37,7 +37,6 @@
   flex: 1;
   position: relative;
   width: 100%;
-  height: 470px;
   right: 12%;
   border-radius: 50%;
   display: flex;
@@ -61,7 +60,7 @@
   }
   to {
     opacity: 1;
-    transform: translateX(80px);
+    transform: translateX(60px);
   }
 }
 
@@ -167,6 +166,12 @@
   .pic_container img {
     max-width: 300px;
     margin-top: 66px;
+  }
+
+  .pic_container {
+    max-height: 320px;
+    max-width: 320px;
+    height: 470px;
   }
 
   .about-container {
