--- a/about.css
+++ b/about.css
@@ -67,7 +67,7 @@
 .pic_container img {
   position: relative;
   width: 100%;
-  max-width: 360px;
+  max-width: 320px;
   height: auto;
   z-index: 1;
 }
@@ -144,13 +144,13 @@
   #about-section {
     flex-direction: column;
     text-align: center;
-    padding: 10rem 5%;
+    padding: 8rem 5%;
   }
 
   .about-me {
     font-size: 80px;
     left: 50%;
-    top: 5%;
+    top: 2%;
     opacity: 0.2;
     white-space: normal;
     transform: translateX(-50%);
@@ -158,20 +158,24 @@
 
   .about-content {
     flex-direction: column;
-    gap: 20px;
+    gap: 25px;
     align-items: center;
     text-align: center;
   }
 
   .pic_container img {
-    max-width: 300px;
-    margin-top: 66px;
+    max-width: 230px;
   }
 
   .pic_container {
-    max-height: 320px;
-    max-width: 320px;
-    height: 470px;
+    width: 270px;
+    height: 250px;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 80px;
   }
 
   .about-container {
@@ -181,24 +185,26 @@
 
   .details-container {
     max-width: 90%;
+    padding: 0 15px;
   }
 
   .cv_btn {
-    justify-content: center;
     width: 100px;
+    margin: 20px auto 0;
+    display: block;
   }
 }
 
 @media (max-width: 480px) {
   #about-section {
     flex-direction: column;
-    padding: 10px;
+    padding: 6rem 5%;
     text-align: center;
   }
 
   .about-me {
     font-size: 50px;
-    top: 5%;
+    top: 6%;
     left: 50%;
     opacity: 0.2;
     white-space: normal;
@@ -211,24 +217,22 @@
   }
 
   .pic_container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
+    width: 200px;
+    height: 200px;
   }
 
   .pic_container img {
-    max-width: 250px;
+    max-width: 180px;
   }
 
   .about-container {
     margin-top: 20px;
-    margin-right: 0;
     width: 100%;
   }
 
   .details-container {
     max-width: 100%;
-    padding: 0 15px;
+    padding: 0 10px;
   }
 
   .abt_txt_1,
@@ -241,7 +245,6 @@
     padding: 10px;
     font-size: 14px;
     margin: 20px auto 0;
-    display: block;
   }
 
   .download {
