--- a/about.css
+++ b/about.css
@@ -14,7 +14,7 @@
   font-weight: 900;
   justify-content: top;
   position: absolute;
-  top: 10%;
+  top: 15%;
   left: 52%;
   opacity: 0.2;
   transform: translate(-50%, -50%);
@@ -31,6 +31,7 @@
   max-width: 1200px;
   width: 100%;
   flex-wrap: nowrap;
+  margin-top: 80px;
 }
 
 .pic_container {
@@ -175,7 +176,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 80px;
+    /* margin-top: 40px; */
   }
 
   .about-container {
@@ -214,6 +215,7 @@
   .about-content {
     flex-direction: column;
     gap: 20px;
+    margin-top: 40px;
   }
 
   .pic_container {
