--- a/experience.css
+++ b/experience.css
@@ -1,6 +1,5 @@
 #experience-section {
   min-height: 70vh;
-  padding: 20px;
   background: rgb(255, 0, 147);
   background: linear-gradient(
     270deg,
@@ -26,9 +25,7 @@
   grid-template-columns: repeat(6, 1fr);
   max-width: 80%;
   gap: 60px;
-  justify-content: center;
-  align-items: center;
-  margin-top: 50px;
+  padding-top: 146px;
 }
 
 .tech_icons img {
@@ -51,17 +48,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     position: relative;
     top: 6px;
     transform: translateY(-50%, 0);
-    text-align: center;
     max-width: 90%;
-    line-height: 1.2;
+    /* line-height: 1.2; */
   }
 
   .tech_icons {
     grid-template-columns: repeat(3, 1fr);
-    margin: 60px auto;
+    /* margin: 60px auto; */
     row-gap: 26px;
     justify-content: center;
   }
@@ -83,7 +80,7 @@
     font-size: 50px;
     top: 5%;
     opacity: 0.2;
-    white-space: normal;
+    white-space: ;
     transform: translateY(-50%, 0);
     display: flex;
     justify-content: center;
@@ -93,14 +90,13 @@
 
   .tech_icons {
     grid-template-columns: repeat(3, 1fr);
-    row-gap: 20px;
-    margin: 50px auto 0;
+    gap: 60px;
     justify-content: center;
   }
 
   .tech_icons img {
-    width: 60px;
-    height: 60px;
+    width: 70px;
+    height: 70px;
   }
 
   .css_icon {
