--- a/contacts.css
+++ b/contacts.css
@@ -1,5 +1,5 @@
 #contact-section {
-  height: 80vh;
+  height: 72vh;
   background: rgb(255, 0, 147);
   background: linear-gradient(
     270deg,
@@ -19,19 +19,18 @@
 .contact_container {
   justify-content: center;
   text-align: center;
-  padding: 50px;
 }
 
 .heading {
   font-size: 20px;
   font-weight: 600;
-  margin-top: 86px;
+  margin-top: 56px;
 }
 
 .contact-details {
   font-size: 16px;
   font-weight: 500;
-  margin-top: 36px;
+  margin-top: 10px;
   line-height: 1.7;
 }
 
@@ -45,6 +44,8 @@ span {
   display: inline-flex;
   justify-content: center;
   align-items: center;
+  margin: 0;
+  padding: 0;
   width: 40px;
   height: 60px;
   background: transparent;
@@ -144,10 +145,6 @@ span {
     font-size: 14px;
     margin-top: 20px;
     line-height: 1.5;
-  }
-
-  .social-media {
-    margin-top: 20px;
   }
 
   .social-media a {
