--- a/hero.css
+++ b/hero.css
@@ -34,11 +34,7 @@
   font-family: Inknut Antiqua;
   background-clip: text;
   background: rgb(12, 4, 97);
-  background: radial-gradient(
-    circle,
-    rgba(12, 4, 97, 1) 0%,
-    rgba(4, 46, 246, 1) 99%
-  );
+  background: radial-gradient(circle, rgb(11, 1, 118) 0%, rgb(1, 39, 226) 99%);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   white-space: nowrap;
@@ -75,7 +71,7 @@
   transition: all 300ms ease;
   border-radius: 10px;
   border: rgb(102, 102, 102) 0.1rem solid;
-  color: rgb(102, 102, 102);
+  color: rgb(70, 70, 70);
   box-shadow: 0 0 4px rgb(46, 46, 46);
   cursor: pointer;
   background: none;
@@ -83,7 +79,7 @@
 }
 
 .dnl-img {
-  width: 20px;
+  width: 24px;
 }
 
 .btn-kontakt {
