--- a/hero.css
+++ b/hero.css
@@ -63,7 +63,7 @@
   justify-content: center;
   text-align: center;
   flex: 1;
-  min-width: 120px;
+  /* min-width: 120px; */
   max-width: 120px;
   min-height: 40px;
   font-size: 14px;
@@ -89,7 +89,7 @@
 
 .btn-cv:hover {
   background: rgb(102, 102, 102);
-  color: gainsboro;
+  color: rgb(32, 32, 32);
   border: none;
   transform: scale(1.05);
 }
