--- a/about.css
+++ b/about.css
@@ -117,44 +117,29 @@
 }
 
 .cv_btn {
-  /* font-size: 16px;
-  width: 120px;
-  padding: 8px 5px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  flex: 1;
-  margin-top: 40px;
-  margin-left: 220px; */
-  /* background: rgb(102, 102, 102); */
-  /* color: rgb(70, 70, 70);
-  box-shadow: 0 0 4px rgb(46, 46, 46);
-  border: rgb(102, 102, 102) 0.1rem solid;
-  border-radius: 10px;
-  font-weight: 600;
-  transition: transform 0.5s ease; */
   display: inline-block;
   position: relative;
   overflow: hidden;
   width: 120px;
-  padding: 8px 5px;
+  padding: 5px 5px;
   margin-top: 40px;
   margin-left: 220px;
   text-decoration: none;
-  font-weight: bold;
+  font-size: 14px;
+  font-weight: 600;
   border: rgb(102, 102, 102) 0.1rem solid;
   border-radius: 10px;
   background: none;
   box-shadow: 0 0 4px rgb(46, 46, 46);
   cursor: pointer;
-  transition: background 0.3s ease;
+  transition: transform 0.5s ease;
 }
-/* .cv_btn:hover {
+.cv_btn:hover {
   background-color: rgb(135, 135, 135);
   color: rgb(32, 32, 32);
+  border: none;
   transform: scale(1.05);
-} */
+}
 
 .download {
   width: 24px;
@@ -163,34 +148,9 @@
 
 .btn-fill-center-text {
   position: relative;
-  z-index: 2;
-  transition: color 0.3s ease;
   display: inline-flex;
+  gap: 6px;
   align-items: center;
-  gap: 8px;
-}
-
-.btn-fill-center-text {
-  color: #000;
-}
-
-.btn-fill-center::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 0%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) rotate(45deg);
-  transition: height 0.4s ease;
-  z-index: 1;
-}
-
-.btn-fill-center:hover::before {
-  height: 500%;
-}
-
-.btn-fill-center:hover .btn-fill-center-text {
   color: #000;
 }
 
