--- a/hero.css
+++ b/hero.css
@@ -58,12 +58,12 @@
 
 .btn-cv,
 .btn-kontakt {
-  display: flex;
+  gap: 6px;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   text-align: center;
   flex: 1;
-  /* min-width: 120px; */
   max-width: 120px;
   min-height: 40px;
   font-size: 14px;
